fixed dark mode on first card

--- a/styles.css
+++ b/styles.css
@@ -518,6 +518,10 @@ input::placeholder {
   border: 3px solid red;
 }
 
+.dark-mode #card-border {
+  border: 3px solid red;
+}
+
 
 
 /*** Dark Mode [PLACEHOLDER] [ADDED IN UNIT 5] ***/
@@ -534,10 +538,6 @@ input::placeholder {
 
 .dark-mode .modal-container {
   background-color: #1E40AF;
-}
-
-.dark-mode .card {
-  border: 1px solid #005596;
 }
 
 /* Example: Different dark mode style for h1 */
@@ -599,6 +599,9 @@ background-color: #005596;
   color: white;
 }
 
+.dark-mode .card {
+  border: 3px solid dodgerblue;
+}
 
 .dark-mode .hamburger span {
   background-color: var(--text-color-dark-mode);
